Cleanup tasks Updated depreciated code in browser launch .gitignore updates Removed a few unneeded variable initializations